hard-gists/6074452/run.log
=== Docker Run Log for 6074452 ===
Started at: Mi 29. Okt 16:18:57 CET 2025

[2025-10-29 16:18:57] START: Running container for 6074452
[2025-10-29 16:18:57] SUCCESS: Container 845697928b436b3e803bfab132524a91c130458ce2f837a2591cb3569b4b5afa started for 6074452
=== Container logs for 6074452 ===
  File "/snippet.py", line 10
    print 'Comparison: %s' % comp_string
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6074452 ===
[2025-10-29 16:18:59] INFO: Container 845697928b436b3e803bfab132524a91c130458ce2f837a2591cb3569b4b5afa has stopped
